# tinyrenderer

./: CMakeLists.txt  main.cpp
App/: App.cpp  App.h
